--- a/views/frm_lab.xml
+++ b/views/frm_lab.xml
@@ -244,7 +244,7 @@ $('#myModal').on('shown.bs.modal', function () {
             <tr>
                 <th>ID</th>
                 <th>Codigo Laboratorio</th>
-                <th>Nombre Laboratorio</th>
+                <th>Numero Laboratorio</th>
                 <th>Estado Puerta</th>
                 <th>Contrasenia</th>
                 <th>Accion </th>
@@ -291,9 +291,9 @@ $('#myModal').on('shown.bs.modal', function () {
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="inputPassword" class="col-sm-2 col-form-label">Nombre del laboratorio</label>
+                    <label for="inputPassword" class="col-sm-2 col-form-label">Numero del laboratorio</label>
                     <div class="col-sm-10">
-                    <input type="text" required="True" class="form-control" id="nombre_lab" name="nombre_lab" t-att-value="nombre_lab" placeholder="Ingrese el nombre del laboratorio"/>
+                    <input type="text" required="True" class="form-control" id="nombre_lab" name="nombre_lab" t-att-value="nombre_lab" placeholder="Ingrese el numero del laboratorio"/>
                     </div>
                 </div>
                 <div class="form-group row">
