--- a/views/frm_editarcurso.xml
+++ b/views/frm_editarcurso.xml
@@ -245,7 +245,7 @@ $('#myModal').on('shown.bs.modal', function () {
                     <select required="True" t-att-value="id_curso" id="carrera" name="carrera" > 
                         <option value="">Eliga una opcion</option>
                         <div t-foreach="c" t-as="data">
-                         <option t-att-value="id_curso"><t t-esc="data.id"></t></option>
+                         <option t-att-value="id_curso"><t t-esc="data.nombre_carrera"></t></option>
                          </div>
                     </select>
                             </div>
